# image_narration_tool

./: main.py  pyproject.toml
approach_one/: main.ipynb
approach_one/.ipynb_checkpoints/: main-checkpoint.ipynb
approach_two/: api_key.txt  main.ipynb
approach_two/.ipynb_checkpoints/: main-checkpoint.ipynb
